--- a/package.json
+++ b/package.json
@@ -4,16 +4,24 @@
     "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.5.0",
     "babel-loader": "^8.0.5",
     "babel-preset-react": "^6.24.1",
+    "classnames": "^2.2.6",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^4.1.10",
     "express": "^4.16.4",
     "jest": "^24.3.1",
+    "mini-css-extract-plugin": "^0.5.0",
     "nodemon": "^1.18.10",
+    "normalize-scss": "^7.0.1",
+    "postcss-loader": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
+    "react-router-dom": "^5.0.0",
     "redux": "^4.0.1"
   },
   "scripts": {
@@ -23,10 +31,18 @@
     "test": "jest",
     "server": "nodemon ./server/index.js"
   },
+  "browserslist": [
+    "> 1%",
+    "last 3 version"
+  ],
   "devDependencies": {
     "babel-jest": "^24.3.1",
     "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
