--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "normalize-scss": "^7.0.1",
     "postcss-loader": "^3.0.0",
     "prop-types": "^15.7.2",
+    "proptypes": "^1.1.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
