--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.5.0",
+    "axios": "^0.18.0",
+    "axios-mock-adapter": "^1.16.0",
     "babel-loader": "^8.0.5",
     "babel-preset-react": "^6.24.1",
     "classnames": "^2.2.6",
+    "connected-react-router": "^6.3.2",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
     "express": "^4.16.4",
+    "fetch-mock": "^7.3.1",
     "jest": "^24.3.1",
     "mini-css-extract-plugin": "^0.5.0",
+    "moxios": "^0.4.0",
     "nodemon": "^1.18.10",
     "normalize-scss": "^7.0.1",
     "postcss-loader": "^3.0.0",
@@ -23,22 +28,23 @@
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^5.0.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-axios-middleware": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "build:dev": "cross-env NODE_ENV=development webpack ./src/index.js --output ./dist/main.js",
     "build:prod": "cross-env NODE_ENV=production webpack ./src/index.js --output ./dist/main.js",
     "serve:dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "test": "jest",
+    "test": "jest --coverage",
     "server": "nodemon ./server/index.js"
   },
   "jest": {
     "moduleNameMapper": {
-      "\\.(css|less)$": "identity-obj-proxy"
+      "\\.(css|scss)$": "identity-obj-proxy"
     },
-    "transform": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/fileTransformer.js"
-    }
+    "setupTestFrameworkScriptFile": "./setupTests.js"
   },
   "browserslist": [
     "> 1%",
@@ -49,9 +55,11 @@
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "node-sass": "^4.11.0",
+    "redux-mock-store": "^1.5.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
