--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "cssnano": "^4.1.10",
     "express": "^4.16.4",
     "fetch-mock": "^7.3.1",
-    "jest": "^24.3.1",
+    "jest": "^24.7.1",
     "mini-css-extract-plugin": "^0.5.0",
     "moxios": "^0.4.0",
     "nodemon": "^1.18.10",
@@ -44,7 +44,9 @@
     "moduleNameMapper": {
       "\\.(css|scss)$": "identity-obj-proxy"
     },
-    "setupTestFrameworkScriptFile": "./setupTests.js"
+    "setupFilesAfterEnv": [
+      "./setupTests.js"
+    ]
   },
   "browserslist": [
     "> 1%",
@@ -61,6 +63,7 @@
     "node-sass": "^4.11.0",
     "redux-mock-store": "^1.5.3",
     "sass-loader": "^7.1.0",
+    "sinon": "^7.3.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
